@@ -1,3 +1,7 @@
+August 22, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * libpcsxcore/misc.c: Also check for PSX.EXE in CheckCdrom().
+
 August 17, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * plugins/peopsxgl/gpu.c: Made the name of the plugin translatable.
